// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AuthenticatedButton /> render, @loading is false 1`] = `
<button
  className="btn"
  content="content"
  onClick={[Function]}
  type="button"
>
  content
</button>
`;

exports[`<AuthenticatedButton /> render, @loading is true 1`] = `
<button
  className="btn"
  content="content"
  onClick={[Function]}
  type="button"
>
  <LoadingIndicator />
</button>
`;
